# Control_financiero

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  move_docker_to_D.ps1
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_and_refresh_tokens.py  0002_add_accounts_categories_transactions.py  0003_add_budgets.py  0004_add_investments.py  0005_add_mortgage_simulations.py  0006_add_tax.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: __init__.py  accounts.py  analytics.py  ml.py  (+9 more)
backend/app/models/: __init__.py  account.py  budget.py  category.py  investment.py  mortgage.py  refresh_token.py  tax.py  transaction.py  user.py
backend/app/schemas/: accounts.py  analytics.py  auth.py  budgets.py  categories.py  forecasting.py  imports.py  investments.py  ml.py  mortgage.py  scenarios.py  tax.py  transactions.py
backend/app/services/: accounts.py  analytics.py  auth.py  budgets.py  categories.py  forecasting.py  imports.py  investments.py  ml_client.py  mortgage.py  scenarios.py  tax.py  transactions.py
backend/app/tasks/: celery_app.py  forecasting.py  ml_retraining.py
backend/app/utils/: csv_parser.py  logging.py  monte_carlo.py  mortgage.py
backend/scripts/: export_training_data.py
backend/tests/: conftest.py  test_accounts.py  test_analytics.py  test_auth.py  test_budgets.py  test_categories.py  test_celery_tasks.py  test_forecasting.py  test_imports.py  test_investments.py  test_ml_client.py  test_mortgage.py  test_scenarios.py  test_tax.py  test_transactions.py
backend/tests/fixtures/: openbank_sample.csv
ml-service/: Dockerfile  pyproject.toml
ml-service/app/: config.py  main.py
ml-service/app/ml/: categories.py  forecaster.py  lstm_model.py  model_manager.py  preprocessor.py  trainer.py
ml-service/app/routers/: feedback.py  forecast.py  health.py  model.py  predict.py  retrain.py
ml-service/app/schemas/: feedback.py  forecast.py  model.py  predict.py  retrain.py
ml-service/data/: dataset.json  generate_timeseries.py  manual_review.json  merge_datasets.py  real_dataset.json  synthetic_dataset.py
ml-service/scripts/: eval_model.py  label_csv.py  train.py  train_forecaster.py
ml-service/tests/: conftest.py  test_categorization.py  test_forecast.py  test_health.py  test_predict.py  test_retrain.py  test_trainer.py
(+121 files in other folders)
